# ORBIT

./: 2_newton.c  3_newton.c  CMakeLists.txt  Makefile  README.md  b  constants.h  defs.h  gravity_box.c  gravity_box.h  main  main.c  newton.c  newton2_defs.h  newton3_defs.h  newton_defs.h  orbit.c  sol.h  solar_system.c
Assets/: installation_linux_macos.md  installation_windows.md
frames/: blender  format_image_names.py  get_frames.py  mars.blend  mercury.blend  saturn.blend  sun.blend  venus.blend
perspectives/: earth.blend  get_frames.py  jupiter.blend  neptune.blend  rotate.py  saturn_ring.blend  uranus.blend
perspectives/saturn_ring/: rotate.py
perspectives/sun/: rotate.py
